--- a/gradle.properties
+++ b/gradle.properties
@@ -12,3 +12,4 @@ archives_base_name=wynnlodgrabber
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.92.2+1.20.1
+wynntils_version=2.1.1
